--- a/style3.css
+++ b/style3.css
@@ -279,4 +279,8 @@ nav {
   .content {
     width: 100% !important;
     overflow: scroll;
+    } 
+
+  .info-block {
+      height: 60% !important;
     } }
