--- a/style2.css
+++ b/style2.css
@@ -42,6 +42,10 @@ body {
   font-size: 20px;
   background-color: #E80808; }
 
+.gh-button {
+  
+}
+
 .is-current {
   text-decoration: underline; }
 
